<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project Licensed under the 
	Apache License, Version 2.0 (the "License"); you may not use this file except 
	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License.
-->

<!-- This handles all the strings in the app. -->
<resources>

    <!-- preferences -->
    <!-- sync URL -->
    <string name="edittxt_website_pref">Enter The Sync URL</string>
    <string name="edittxt_website_pref_summary">This is the website that will receive the text messages.</string>

    <!-- secret -->
    <string name="edittxt_api_key_pref">Enter the Secret</string>
    <string name="edittxt_api_key_pref_summary">If a secret/key has been specified at the website, it will be required.</string>

    <!-- filter by keywords -->
    <string name="edittxt_keyword_pref">Enter Keyword - optional</string>
    <string name="editxt_keyword_pref_summary">Specify what keywords that will be used to filter the message sent to the gateway.</string>
    <string name="edittxt_keyword_hint">fire, crime, help, report,etc</string>

    <!-- filter by phone numbers -->
    <string name="edittxt_filter_by_from_pref">Enter Phone Number - optional)</string>
    <string name="edittxt_filter_by_from_pref_summary">Specify what phone numbers that will be used to filter the message sent to the gateway.</string>
    <string name="edittxt_filter_by_from_hint">+233713849796,+254243581806</string>

    <!-- unique id -->
    <string name="edittxt_unique_id_pref">Enter Unique ID</string>
    <string name="edittxt_unique_id_pref_summary">Specify a unique ID for this device. This will be used by the Sync URL to know exactly which device is sending it messages. It should be 5 digits</string>
    <string name="edittxt_unique_id_hint">01234</string>

    <!-- response message -->
    <string name="edittxt_reply">Enter A Response Message</string>
    <string name="edittxt_reply_title">A Response Message</string>
    <string name="edittxt_reply_summary">The message to be sent to users.</string>
    <string name="edittxt_reply_default">Your message has been received.Thank you.</string>

    <!-- enable/disable smssync -->
    <string name="sms_sync_enabled">SMSSync Is Enabled</string>
    <string name="sms_sync_disabled">SMSSync Disabled</string>

    <!-- general settings -->
    <string name="general_settings">General Settings</string>

    <!-- reply from server -->
    <string name="reply_settings">Reply Message Settings</string>
    <string name="chk_enable_sms_sync">Start SMSSync</string>
    <string name="chk_sms_sync_hint">Start and Stop SMS gateway.</string>
    <string name="chk_enable_reply">Reply Messages</string>
    <string name="chk_reply_hint">This will auto respond to every message that comes to SMSSync.</string>

    <!-- auto delete messages -->
    <string name="chk_enable_auto_delete">Auto Delete Messages</string>
    <string name="chk_auto_delete_hint">This will automatically delete messages from the Message app\'s inbox to save space on the phone.</string>

    <!-- enable auto sync -->
    <string name="chk_enable_auto_sync">Enable Auto Sync</string>
    <string name="chk_enable_auto_sync_hint">This will allow SMSSync to periodically sync pending messages.</string>

    <!-- auto sync delay -->
    <string name="txt_auto_sync_delay">Auto sync frequency</string>
    <string name="auto_sync_delay_hint">Set how often SMSSync syncronizes with the
		configured callback URL.</string>

    <!-- enable task check -->
    <string name="chk_enable_task_check">Enable Task Checking</string>
    <string name="chk_enable_task_check_hint">This will allow SMSSync to periodically check for tasks enabled on the callback URL.Smssync then executes the task. Eg. SMSSync sends SMS</string>

    <!-- task check deply -->
    <string name="txt_task_check_delay">Frequency</string>
    <string name="txt_task_check_delay_hint">Set how often SMSSync checks for a task to be executed.</string>
    <string name="app_name">SMSSync</string>
    <string name="outbox">SMSSync Pending Messages</string>
    <string name="version_status">Beta</string>
    <string name="sms_status_success">SMSSync Message Sent</string>
    <string name="sms_status_failed">SMSSync Message Sending failed</string>
    <string name="notification_summary">SMSSync Gateway is Running</string>
    <string name="sending_failed">SMSSync Message Sending failed.</string>
    <string name="sending_succeeded">SMSSync Message Sent.</string>
    <string name="no_messages_to_sync">There are no messages to send.</string>
    <string name="no_messages_to_delete">There are no messages to delete.</string>
    <string name="sync_failed">SMSSync message sending failed. Perhaps its not configured or there is no Internet connection. Please double check your Internet connection or your configuration.</string>
    <string name="powered">Powered</string>
    <string name="powered_by">Created by Ushahidi</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_sync_all">Synchronize All</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_import">Import SMS</string>
    <string name="menu_settings">Settings</string>
    <string name="messages_deleted">Messages successfully deleted.</string>
    <string name="messages_deleted_failed">Messages couldn\'t be deleted.</string>
    <string name="status">Status</string>
    <string name="empty_list">No pending messages.</string>
    <string name="http_text">http://</string>
    <string name="sms_failed">SMS failed</string>

    <!-- URL validation -->
    <string name="invalid_url">Please the URL entered was invalid.</string>
    <string name="no_configured_url">Please there is no configured URL.</string>
    <string name="no_connection">Could not make connection to the URL.</string>
    <string name="no_task">No task is enabled on the configured callback URL.
	</string>
    <string name="auto_sync_settings">Auto Sync Settings</string>
    <string name="task_check_settings">Task Settings</string>
    <string name="about_smssync">About Sync</string>
    <string name="please_wait">Please wait</string>
    <string name="smssync_not_enabled">SMSSync is not enabled. Please enable it from the Settings screen.</string>
    <string name="import_messages">Importing messages...</string>
    <string name="nothing_to_import">No messages to import. Make sure you have SMS messages in your SMS inbox.</string>
    <string name="chk_enable_reply_frm_server">Get Reply From Server</string>
    <string name="chk_reply_frm_server_hint">This will instantly send messages as recieved from the server as SMS without waiting on a scheduler </string>
    <string name="filter_messages">Filter messages</string>

    <!-- SMS delivery status -->
    <string name="sms_delivery_status_failed">Failed to send SMS -- Maybe insufficient air time on the phone</string>
    <string name="sms_delivery_status_no_service">No service</string>
    <string name="sms_delivery_status_radio_off">Radio off</string>
    <string name="sms_delivery_status_null_pdu">No PDU</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>

    <!-- Pending and failed messages Tab -->
    <string name="pending_messages">Pending</string>
    <string name="sent_messages">Sent</string>
    <string name="title_bar_text">Messages</string>
    <string name="no_sent_messages">No sent messages.</string>

    <!-- confirmation dialog -->
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="confirm_message">Are you sure you want to perform this action?</string>

    <!-- validate unique id -->
    <string name="unique_id_length_error">Unique ID cannot be longer or less than 5 digits</string>
    <string name="unique_id_numeric_error">Unique ID accepts only numbers</string>

</resources>