<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
  
	<PreferenceCategory
    	android:title="@string/general_settings">
    	
		<EditTextPreference
    		android:key="website_preference"
   			android:title="@string/edittxt_website_pref"
      		android:summary="@string/edittxt_website_pref_summary"
      		android:dialogTitle="@string/edittxt_website_pref_dialog_title" />
        
        <CheckBoxPreference
        	android:key="enable_sms_sync_preference"
       		android:title="@string/chk_enable_sms_sync"
          	android:summary="@string/chk_sms_sync_hint" />
          	
        <EditTextPreference
    		android:key="keyword_preference"
   			android:title="@string/edittxt_keyword_pref"
      		android:summary="@string/editxt_keyword_pref_summary"
      		android:dialogTitle="@string/edittxt_keyword_dialog_pref"
      		android:hint="@string/edittxt_keyword_hint" />
          	
  	</PreferenceCategory>
</PreferenceScreen>
